@@ -9,6 +9,7 @@
 * NAB Transact: Add scrubbing to NAB Transact [bruno] #2038
 * iATS: Add scrubbing support to iATS [bruno] #2228
 * Stripe: Ensure ECI values for tokenized cards are padded [jasonwebster] #2250
+* Forte: Fix incorrect authorization_code response mapping [davidsantoso]
 
 == Version 1.61.0 (November 7, 2016)
 * Add codes AQ, BQ, SX, and SS to list of countries and update SD numeric code [zxlin]
